@@ -1,3 +1,10 @@
+Wed Jun 26 19:49:49 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/catman.c (usage), src/man.c (usage), src/mandb.c (usage),
+	  src/manpath.c (usage): Make --help output more consistent.
+	* src/whatis.c (usage): Likewise. "alternate systems" => "alternate
+	  systems'".
+
 Wed Jun 26 14:47:01 UTC 2002  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.4.0.
